Fixed Edit Last Meal with no meal error     Opening Screen and all menus     Added if check if meal number from cursor is 0     Solution still accesses database.

--- a/app/src/main/res/layout/activity_open_screen.xml
+++ b/app/src/main/res/layout/activity_open_screen.xml
@@ -23,7 +23,7 @@
         <Button
             android:id="@+id/edit_last_meal_button"
             style="@style/MainMenuButton"
-            android:onClick="editLastMeal"
+            android:onClick="editLastMealClick"
             android:text="@string/edit_last_meal" />
 
         <Button
