Added instructions on how to remove photo using long click

--- a/app/src/main/res/layout/activity_input_meal.xml
+++ b/app/src/main/res/layout/activity_input_meal.xml
@@ -282,6 +282,13 @@
                 android:numColumns="3"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="5dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hold_to_delete_photo"
+                android:layout_marginTop="4dp"
+                android:gravity="center"/>
         </LinearLayout>
 
 
