Minor layout changes. Button Text Size, Dined With capitalization.

--- a/app/src/main/res/layout/activity_input_meal.xml
+++ b/app/src/main/res/layout/activity_input_meal.xml
@@ -69,7 +69,7 @@
             <EditText
                 android:id="@+id/dined_with_input"
                 style="@style/InputText"
-                android:inputType="textPersonName" />
+                android:inputType="textCapWords" />
         </LinearLayout>
 
         <LinearLayout style="@style/DetailsBlock">
