--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="android:layout_marginRight">50dp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/medium_text</item>
         <item name="android:gravity">center</item>
     </style>
 
