--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -134,6 +134,30 @@
                     android:stretchMode="columnWidth"
                     android:verticalSpacing="5dp" />
             </LinearLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                style="@style/Button"
+                android:textSize="@dimen/small_text"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/share_instructions"
+                android:textAllCaps="false"
+                android:onClick="shareWithFriend"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                style="@style/Button"
+                android:textSize="@dimen/small_text"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:text="@string/share_w_memory_bite_instructions"
+                android:textAllCaps="false"
+                android:onClick="shareWithMemoryBite"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
