FIXED BUTTON ISSUE! Changed from TextView to Button. Also changed all buttons to have fancy text and similar formatting. I know that's two changes in one commit, but sue me.

--- a/app/src/main/res/layout/activity_input_meal.xml
+++ b/app/src/main/res/layout/activity_input_meal.xml
@@ -294,13 +294,13 @@
 
         <LinearLayout style="@style/DetailsBlock">
 
-            <TextView
+            <Button
                 android:id="@+id/photo_button"
                 android:onClick="addPictureButtonClick"
                 android:text="@string/add_photo"
                 style="@style/Button" />
 
-            <TextView
+            <Button
                 android:id="@+id/save_button"
                 style="@style/Button"
                 android:onClick="saveMeal"
