--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <!-- Text Sizes -->
     <dimen name="small_text">14sp</dimen>
     <dimen name="medium_text">18sp</dimen>
+    <dimen name="extra_medium_text">20sp</dimen>
     <dimen name="large_text">24sp</dimen>
     <dimen name="jumbo_text">28sp</dimen>
     <dimen name="super_mega_text">34sp</dimen>
