--- a/app/src/main/res/layout/activity_input_meal.xml
+++ b/app/src/main/res/layout/activity_input_meal.xml
@@ -243,39 +243,30 @@
 
 
         <LinearLayout style="@style/DetailsBlock">
-
-            <TextView
-                style="@style/InputLabel"
-                android:gravity="center"
-                android:textSize="@dimen/small_text"
-                android:text="@string/add_photo" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <Button
+                <ImageButton
                     android:id="@+id/take_photo_button"
                     android:layout_weight="1"
                     android:onClick="takeNewPhoto"
-                    android:text="@string/camera"
                     android:textSize="@dimen/extra_medium_text"
                     android:layout_marginRight="5dp"
                     android:layout_marginTop="2dp"
-                    android:drawableStart="@android:drawable/ic_menu_camera"
+                    android:src="@mipmap/ic_photo_camera_white_36dp"
                     style="@style/Button" />
-
-                <Button
+                <ImageButton
                     android:id="@+id/select_photo_button"
                     android:layout_weight="1"
                     android:onClick="choosePhotoFromGallery"
-                    android:text="@string/gallery"
                     android:textSize="@dimen/extra_medium_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="2dp"
-                    android:drawableStart="@android:drawable/ic_menu_gallery"
+                    android:src="@mipmap/ic_photo_white_36dp"
                     style="@style/Button" />
             </LinearLayout>
+
             <Button
                 android:id="@+id/save_button"
                 style="@style/Button"
