--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="primary_green">#638034</color>
     <color name="accent_blue">#102B69</color>
     <color name="primary_green_darker">#3d552a</color>
+    <color name="primary_green_dark">#314522</color>
     <color name="secondary_text">#CCFFFFFF</color>
 
     <color name="brighter_text">#e1ffffff</color>
