DRASTIC CHANGE CAUSE I DIDN'T THINK IT'D WORK:   * Changed to PagerView between images   * Implimented custom TouchImageView to allow pinch zoom and panning for photos    * Made custom image view programming using UIL and TouchImageView instead of passing intent to gallery    * Changed DBHelper to pass ArrayList of photos not just list so that I could pass a parcelable through the activities from MealDetails to the All New Full Screen View    * Hope I didn't inadvertantly break anything.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,13 @@
         <item name="colorPrimaryDark">@color/primary_green_darker</item>
     </style>
 
+    <style name="AppTheme.NoActionBar.FullScreen" parent="@style/AppTheme">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="CustomRadioButton">
         <item name="android:background">@drawable/radio_button_selector</item>
         <item name="android:layout_width">0dp</item>
