Changed to teal fork pencil logo and changed colors to teal. YAYYYYZO

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 
     <color name="main_background">#303030</color>
     <color name="card_background">#424242</color>
-    <color name="primary_green">#638034</color>
+    <color name="primary_green">#1EB48F</color>
     <color name="accent_blue">#102B69</color>
-    <color name="primary_green_darker">#3d552a</color>
-    <color name="primary_green_dark">#314522</color>
+    <color name="primary_green_darker">#198369</color>
+    <color name="primary_green_dark">#1d9e7e</color>
     <color name="secondary_text">#CCFFFFFF</color>
 
     <color name="brighter_text">#e1ffffff</color>
