Finshed changing more colors and lightened up the backgrounds a bit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,14 @@
 <resources>
 
-    <color name="main_background">#303030</color>
-    <color name="card_background">#424242</color>
+    <color name="main_background">#424242</color>
+    <color name="card_background">#606060</color>
     <color name="primary_green">#1EB48F</color>
-    <color name="accent_blue">#102B69</color>
     <color name="primary_green_darker">#198369</color>
     <color name="primary_green_dark">#1d9e7e</color>
     <color name="secondary_text">#CCFFFFFF</color>
+    <color name="black_text">#151515</color>
 
     <color name="brighter_text">#e1ffffff</color>
 
-    <!--Retro colors from Colourlovers.com/palette/433420/Mediterrasian -->
-    <color name="faded_white">#75FFFFFF</color>
-    <color name="cl_tan">#EBE18C</color>
-    <color name="cl_tan_secondary">#70EBE18C</color>
-    <color name="cl_tan_hint">#30EBE18C</color>
-    <color name="cl_red">#DC3F1C</color>
-    <color name="cl_aqua">#448D7A</color>
-    <color name="cl_copper">#70D8A027</color>
-    <color name="cl_green">#88A764</color>
- <color name="cl_background">#52534E</color>
-    <color name="accent_material_dark">#c22a7d19</color>
+    <color name="accent_material_dark">#198369</color>
 </resources>
