--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/brighter_text</item>
         <item name="android:textSize">@dimen/small_text</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -38,7 +38,7 @@
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginRight">40dp</item>
         <item name="android:layout_marginTop">5dp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/brighter_text</item>
         <item name="android:textSize">@dimen/large_text</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:gravity">center</item>
