Added export buttons to Open Screen and Meal List activity menus. No functionality to buttons yet.

--- a/app/src/main/res/menu/menu_open_screen.xml
+++ b/app/src/main/res/menu/menu_open_screen.xml
@@ -19,6 +19,11 @@
         android:title="@string/view_journal"
         app:showAsAction="never" />
     <item
+        android:id="@+id/export_menu"
+        android:orderInCategory="80"
+        android:title="@string/export"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about_menu"
         android:orderInCategory="90"
         android:title="@string/about"
