--- a/app/src/main/res/menu/menu_list_of_meals.xml
+++ b/app/src/main/res/menu/menu_list_of_meals.xml
@@ -20,6 +20,11 @@
         android:title="@string/edit_last_meal"
         app:showAsAction="never" />
     <item
+        android:id="@+id/export_menu"
+        android:orderInCategory="80"
+        android:title="@string/export"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about_menu"
         android:orderInCategory="90"
         android:title="@string/about"
