--- a/app/src/main/res/layout/layout_fullscreen_image.xml
+++ b/app/src/main/res/layout/layout_fullscreen_image.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:textSize="@dimen/small_text"
-        android:text="@string/Close"
+        android:text="@string/close_X"
         android:gravity="center"
         />
 
