--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,10 @@
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
 
+    <!-- Margins for the PDF canvas. In px which translate to pt (72 pt/in). -->
+    <dimen name="pdf_horizontal_margin">18px</dimen>
+    <dimen name="pdf_vertical_margin">24px</dimen>
+
     <!-- Input label view dimensions -->
     <dimen name="label_top_margin">6dp</dimen>
     <dimen name="label_bottom_margin">2dp</dimen>
