--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,5 +126,44 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="DetailsLabelPDF">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">6px</item>
+        <item name="android:layout_marginBottom">2px</item>
+        <item name="android:textColor">@color/black_text</item>
+        <item name="android:textSize">12px</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="DetailsTextCenteredPDF">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">12px</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="DetailsTextPDF">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">12px</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">11px</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="DetailsBlockPDF">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>]
+        <item name="android:layout_marginBottom">10px</item>
+        <item name="android:paddingLeft">10px</item>
+        <item name="android:paddingRight">10px</item>
+        <item name="android:paddingTop">5px</item>
+        <item name="android:paddingBottom">5px</item>
+        <item name="android:background">@drawable/customborderforpdf</item>
+        <item name="android:orientation">vertical</item>
+    </style>
 
 </resources>
