--- a/app/src/main/res/layout/layout_pdf_photo_page_template.xml
+++ b/app/src/main/res/layout/layout_pdf_photo_page_template.xml
@@ -9,34 +9,90 @@
     android:paddingLeft="@dimen/pdf_horizontal_margin"
     android:paddingRight="@dimen/pdf_horizontal_margin">
 
-    <TableLayout style="@style/DetailsBlockPDF"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:orientation="horizontal">
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/photo_1"
-                android:layout_width="wrap_content"
-                android:layout_height="1px"
-                android:layout_marginLeft="5px"
-                android:scaleType="fitCenter"
-                android:layout_gravity="center"
-                android:visibility="gone"/>
+        <LinearLayout style="@style/DetailsBlockPDF"
+            android:id="@+id/column_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5px"
+            android:layout_marginRight="5px"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/photo_1"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="5px"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:id="@+id/photo_2"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="5px"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:id="@+id/photo_3"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="5px"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/DetailsBlockPDF"
+            android:id="@+id/column_2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5px"
+            android:layout_marginTop="5px"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/photo_6"
-                android:layout_width="wrap_content"
-                android:layout_height="1px"
-                android:layout_marginLeft="5px"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="5px"
                 android:scaleType="fitCenter"
                 android:layout_gravity="center"
                 android:visibility="gone"/>
-        </TableRow>
 
-    </TableLayout>
+            <ImageView
+                android:id="@+id/photo_5"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="5px"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/photo_4"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="5px"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
